--- a/ansible/plays/5-misc.yaml
+++ b/ansible/plays/5-misc.yaml
@@ -1,5 +1,5 @@
 ---
-- hosts: test
+- hosts: test:webai:!configured
   tasks:  
    - name: Enable pam_umask.so
      lineinfile:
@@ -42,6 +42,3 @@
        owner: root
        group: root
        mode: 0644
-
-   - name: lock root account
-     command: passwd --lock root
