--- a/ansible/plays/4-mysql-php.yaml
+++ b/ansible/plays/4-mysql-php.yaml
@@ -1,5 +1,5 @@
 ---
-- hosts: test
+- hosts: test:webdb:webai:!configured
   tasks:
     - name: install extension
       apt: name=php7.3-mysql state=present
